womtool/src/test/resources/validate/biscayne/invalid/object_type/object_type.wdl
version development

workflow object_type {
  input {
    Object foo
  }

  output {
    Object foo_out = foo
  }
}
